using System;
using System.Collections.Generic;
using System.Data;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

public static class AnimationConstants
{
    // item collector
    public const string ItemCollectedTriggerName = "ItemCollected";

    // player
    public const string SpeedPropertyName = "Speed";
    public const string StartPickUpTriggerName = "StartPickUp";
    public const string ContinuePickUpTriggeName = "ContinuePickUp";
    public const string EndPickUpTriggerName = "EndPickUp";
    public const string DanceTriggerName = "Dance";
    public const string CryTriggerName = "Cry";
}
